sunton_s3_touch_panel/build_log.txt
Processing esp32-s3-devkitc-1 (platform: espressif32 @ 6.6.0; board: esp32-s3-devkitc-1; framework: arduino)
--------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/espressif32/esp32-s3-devkitc-1.html
PLATFORM: Espressif 32 (6.6.0) > Espressif ESP32-S3-DevKitC-1-N8 (8 MB QD, No PSRAM)
HARDWARE: ESP32S3 240MHz, 320KB RAM, 8MB Flash
DEBUG: Current (esp-builtin) On-board (esp-builtin) External (cmsis-dap, esp-bridge, esp-prog, iot-bus-jtag, jlink, minimodule, olimex-arm-usb-ocd, olimex-arm-usb-ocd-h, olimex-arm-usb-tiny-h, olimex-jtag-tiny, tumpa)
PACKAGES: 
 - framework-arduinoespressif32 @ 3.20014.231204 (2.0.14) 
 - tool-esptoolpy @ 1.40501.0 (4.5.1) 
 - toolchain-riscv32-esp @ 8.4.0+2021r2-patch5 
 - toolchain-xtensa-esp32s3 @ 8.4.0+2021r2-patch5
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ chain, Compatibility ~ soft
Found 38 compatible libraries
Scanning dependencies...
Dependency Graph
|-- GFX Library for Arduino @ 1.6.0
|-- ArduinoJson @ 6.21.5
|-- lvgl @ 8.3.9
|-- Wire @ 2.0.0
|-- WiFi @ 2.0.0
|-- FS @ 2.0.0
|-- SD @ 2.0.0
|-- SPI @ 2.0.0
|-- NimBLE-Arduino @ 1.4.3
|-- TJpg_Decoder @ 1.1.0
|-- USB @ 2.0.0
Building in release mode
Compiling .pio\build\esp32-s3-devkitc-1\src\main.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\databus\Arduino_ESP32S2PAR8Q.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\databus\Arduino_ESP32SPI.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\databus\Arduino_ESP32SPIDMA.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\databus\Arduino_ESP8266SPI.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\databus\Arduino_HWSPI.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\databus\Arduino_NRFXSPI.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\databus\Arduino_RPiPicoPAR16.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\databus\Arduino_RPiPicoPAR8.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\databus\Arduino_RPiPicoSPI.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\databus\Arduino_RTLPAR8.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\databus\Arduino_STM32PAR8.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\databus\Arduino_SWPAR16.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\databus\Arduino_SWPAR8.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\databus\Arduino_SWSPI.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\databus\Arduino_UNOPAR8.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\databus\Arduino_Wire.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\databus\Arduino_XCA9554SWSPI.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\databus\Arduino_XL9535SWSPI.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\databus\Arduino_mbedSPI.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\display\Arduino_AXS15231B.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\display\Arduino_CO5300.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\display\Arduino_DSI_Display.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\display\Arduino_GC9106.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\display\Arduino_GC9107.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\display\Arduino_GC9A01.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\display\Arduino_GC9C01.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\display\Arduino_HX8347C.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\display\Arduino_HX8347D.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\display\Arduino_HX8352C.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\display\Arduino_HX8357A.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\display\Arduino_HX8357B.cpp.o
src/main.cpp: In function 'bool tjpg_callback(int16_t, int16_t, uint16_t, uint16_t, uint16_t*)':
src/main.cpp:36:3: error: 'gfx' was not declared in this scope
   gfx->draw16bitRGBBitmap(x, y, bitmap, w, h);
   ^~~
src/main.cpp: In member function 'virtual void DataCallbacks::onWrite(NimBLECharacteristic*)':
src/main.cpp:62:29: error: 'statusLabel' was not declared in this scope
           lv_label_set_text(statusLabel, "Imprimiendo etiqueta...");
                             ^~~~~~~~~~~
*** [.pio\build\esp32-s3-devkitc-1\src\main.cpp.o] Error 1
========================== [FAILED] Took 8.70 seconds ==========================
